<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Login"
    android:background="#ACAFAC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/LogoID"
            android:contentDescription="@string/logo"
            android:src="@drawable/doctor"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp" />

        <TextView
            android:id="@+id/LogoTitleID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/WelcomeMessage"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#0000"
                android:theme="@style/TextInputLayoutStyle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:hintTextAppearance="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/LoginEmailID"
                    android:hint="@string/PleaseEnterYourEmail"
                    android:drawableStart="@drawable/ic_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:background="#30ffffff"
                    android:inputType="textEmailAddress"
                    android:textColor="#317773"
                    android:textSize="18sp"
                    android:textColorHint="#30317773" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/black"
                    android:theme="@style/TextInputLayoutStyle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:hintTextAppearance="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/LoginPasswordID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock"
                        android:hint="@string/PleaseEnterYourPassword"
                        android:inputType="textPassword"
                        android:drawablePadding="10dp"
                        android:background="#30ffffff"
                        android:textColor="#317773"
                        android:textColorHint="#30317773"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/ButtonLoginID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="#30ffffff"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"/>

            <TextView
                android:id="@+id/Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ClickHeretoRegister"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="16sp"/>
            

        </LinearLayout>
    </LinearLayout>

</ScrollView>